--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -2,7 +2,7 @@ home = /usr
 implementation = CPython
 version_info = 3.10.4.final.0
 virtualenv = 20.15.1
-include-system-site-packages = false
+include-system-site-packages = true
 base-prefix = /usr
 base-exec-prefix = /usr
 base-executable = /usr/bin/python3
