--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,9 @@ chardet==3.0.4
 Django==2.2.13
 django-cors-headers==3.2.0
 djangorestframework==3.11.0
-gast==0.2.2
 google-auth==1.10.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
-grpcio==1.26.0
 h5py
 idna==2.8
 joblib==0.14.1
@@ -21,26 +19,24 @@ Markdown==3.1.1
 numpy
 oauthlib==3.1.0
 opencv-python==4.6.0.66
-opt-einsum==3.1.0
 pandas==1.1.4
-Pillow==6.2.1
+Pillow
 protobuf==3.11.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==5.2
+PyYAML
 requests==2.22.0
 requests-oauthlib==1.3.0
-rsa==4.0
-scikit-learn==0.22
+scikit-learn
 scipy==1.6.0
 six==1.13.0
 sqlparse==0.3.0
-tensorboard==2.9
-tensorflow==2.9.2
-tensorflow-estimator==2.9.0rc0
-termcolor==1.1.0
+tensorboard
+tensorflow
+tensorflow-estimator
+termcolor
 urllib3==1.25.7
 Werkzeug
-wrapt==1.11.2
+wrapt
